--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "my-reusablecomponents",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
      "build": "rollup -c"
